Added website icon

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- Website Icon -->
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
         <title>HBCAZM Admin Login</title>
 
         <!-- This loads the bootstrap stylesheet -->
