--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!-- Website Icon -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
     <title>HB CAZM, Admin Portal - Home</title>
 
     <!-- This loads the bootstrap stylesheet -->
