--- a/templates/courses.html
+++ b/templates/courses.html
@@ -80,6 +80,7 @@
                         <th data-field="code" data-sortable="true">Code</th>
                         <th data-field="name" data-sortable="true">Name</th>
                         <th data-field="term" data-sortable="true">Term</th>
+                        <th data-field="credits" data-sortable="true">Credits</th>
                     </tr>
                 </thead>
             </table>
