Removed unimplemented features.

--- a/templates/courses.html
+++ b/templates/courses.html
@@ -32,9 +32,9 @@
 
             <!-- Sidebar Links -->
             <ul class="list-unstyled components">
-                <li><a href="/">Home</a></li>
+                <!-- <li><a href="/">Home</a></li> -->
                 <li class="active"><a href="courses">Courses</a></li>
-                <li><a href="students">Students</a></li>
+                <!-- <li><a href="students">Students</a></li> -->
             </ul>
 
             <ul class="list-unstyled CTAs">
@@ -55,7 +55,7 @@
 
             <!-- Start of Page Content -->
             <h2>Available Courses</h2>
-            <p>Description of what this data represents.</p>
+            <!-- <p>Description of what this data represents.</p> -->
 
             <div id="toolbar">
                 <button id="resync" class="btn btn-secondary">
